Tets añadidos y mas

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <span class="player-name">Rival 1</span>
                     <span class="player-status" id="status-rival1"></span>
                 </div>
-                <div class="player-hand player-hand--hidden player-hand--vertical" id="mano-rival1">
+                <div class="player-hand player-hand--hidden" id="mano-rival1">
                     <div class="card card--back" data-position="0"></div>
                     <div class="card card--back" data-position="1"></div>
                     <div class="card card--back" data-position="2"></div>
@@ -101,7 +101,7 @@
                     <span class="player-name">Rival 2</span>
                     <span class="player-status" id="status-rival2"></span>
                 </div>
-                <div class="player-hand player-hand--hidden player-hand--vertical" id="mano-rival2">
+                <div class="player-hand player-hand--hidden" id="mano-rival2">
                     <div class="card card--back" data-position="0"></div>
                     <div class="card card--back" data-position="1"></div>
                     <div class="card card--back" data-position="2"></div>
