--- a/index.html
+++ b/index.html
@@ -158,6 +158,13 @@
                     <span class="btn-text">NO QUIERO</span>
                 </button>
             </div>
+
+            <!-- Controles de descarte -->
+            <div class="controls-group controls-group--descarte" style="display:none">
+                <button type="button" class="btn btn--mus" id="btn-confirmar-descarte">
+                    <span class="btn-text">CONFIRMAR</span>
+                </button>
+            </div>
         </section>
 
         <!-- Indicador de turno -->
